--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section>
             <h2>Actividad 1:</h2>
             <ul>
-                <li><a href="">Ejercicio 1</a></li>
+                <li><a href="Actividad1/Ejercicio1/Index.html">Ejercicio 1</a></li>
                 <li><a href="">Ejercicio 2</a></li>
                 <li><a href="">Ejercicio 3</a></li>
             </ul>
@@ -21,4 +21,5 @@
 
 
     </body>
+
 </html>
