--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <h2>Actividad 1:</h2>
             <ul>
                 <li><a href="Actividad1/Ejercicio1/index.html">Ejercicio 1</a></li>
-                <li><a href="">Ejercicio 2</a></li>
-                <li><a href="">Ejercicio 3</a></li>
+                <li><a href="Actividad1/Ejercicio2/Index.html">Ejercicio 2</a></li>
+                <li><a href="Actividad1/Ejercicio3/Ejercicio3.html">Ejercicio 3</a></li>
             </ul>
         </section>
 
@@ -23,5 +23,6 @@
     </body>
 
 </html>
+
 
 
