--- a/index.html
+++ b/index.html
@@ -17,17 +17,14 @@
                 <li><a href="Actividad1/Ejercicio3/Ejercicio3.html">Ejercicio 3</a></li>
             </ul>
 
-            <p>Prueba de enlaces:</p>
-<a href="https://www.google.com" id="test1" target="_blank">Ir a Google (debería abrir)</a>
-<a href="./Actividad1/Ejercicio1/index.html" id="test2">Prueba relativa (Ejercicio1)</a>
-
-        </section>
+        actualizateeeeeeeeeeee
 
 
 
     </body>
 
 </html>
+
 
 
 
