--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
             <ul>
                 <li><a href="Actividad1/Ejercicio1/index.html">Ejercicio 1</a></li>
                 <li><a href="Actividad1/Ejercicio2/Index.html">Ejercicio 2</a></li>
-                <li><a href="Actividad1/Ejercicio3/Ejercicio3.html">Ejercicio 3</a></li>
+                <li><a href="Actividad1/Ejercicio 3/Ejercicio3.html">Ejercicio 3</a></li>
             </ul>
-
-        actualizateeeeeeeeeeee
 
 
 
     </body>
 
 </html>
+
 
 
 
