--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="Actividad1/Ejercicio1/index.html">Ejercicio 1</a></li>
                 <li><a href="Actividad1/Ejercicio2/Index.html">Ejercicio 2</a></li>
-                <li><a href="Actividad1/Ejercicio 3/Ejercicio3.html">Ejercicio 3</a></li>
+                <li><a href="Actividad1/Ejercicio%203/Ejercicio3.html">Ejercicio 3</a></li>
             </ul>
 
 
@@ -22,6 +22,7 @@
     </body>
 
 </html>
+
 
 
 
