--- a/index.html
+++ b/index.html
@@ -7,19 +7,23 @@
     </head>
     <body>
         <header>
-            <h1>Mis actividades:</h1>
+            <h1>Alejandro Esponda Meza</h1>
         </header>
+        <h2>Ejercicios y páginas de html:</h2>
         <section>
-            <h2>Actividad 1:</h2>
-            <ul>
-                <li><a href="Actividad1/Ejercicio1/index.html">Ejercicio 1</a></li>
-                <li><a href="Actividad1/Ejercicio2/Index.html">Ejercicio 2</a></li>
-                <li><a href="Actividad1/Ejercicio%203/Ejercicio3.html">Ejercicio 3</a></li>
-            </ul>
+            <ol>
+                <li>Actividad 1:</li>
+                <ul>
+                    <li><a href="Actividad1/Ejercicio1/index.html">Ejercicio 1</a></li>
+                    <li><a href="Actividad1/Ejercicio2/Index.html">Ejercicio 2</a></li>
+                    <li><a href="Actividad1/Ejercicio%203/Ejercicio3.html">Ejercicio 3</a></li>
+                </ul>
+            </ol>
 
     </body>
 
 </html>
+
 
 
 
