--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
                     <li><a href="Actividad1/Ejercicio2/Index.html">Ejercicio 2</a></li>
                     <li><a href="Actividad1/Ejercicio%203/Ejercicio3.html">Ejercicio 3</a></li>
                 </ul>
+                <li>Práctica 2::</li>
+                <ul>
+                    <li><a href="practica2/editar_y_eliminar.html">Práctica 2</a></li>
+                </ul>
             </ol>
+        
 
     </body>
 
 </html>
+
 
 
 
