--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
                 <li>Práctica 2::</li>
                 <ul>
-                    <li><a href="practica2/editar_y_eliminar.html">Práctica 2</a></li>
+                    <li><a href="https://github.com/AlexitoC21/Lab2">Práctica 2</a></li>
                 </ul>
             </ol>
         
@@ -28,6 +28,7 @@
     </body>
 
 </html>
+
 
 
 
