--- a/Actividad1/Ejercicio2/Index.html
+++ b/Actividad1/Ejercicio2/Index.html
@@ -22,10 +22,10 @@
             <section>
                 <h2>Presentación</h2>
                 <p>
-                    Hola, me presento. Yo soy yo c: Me gusta:
+                    Hola, me presento. Soy Alejandro Esponda Meza Me gusta:
                 </p>
                 <ul>
-                    <li>Dormir</li>
+                    <li>Crear</li>
                     <li>Jugar</li>
                     <li>Ver series</li>
                 </ul>
@@ -102,4 +102,5 @@
             Alejandro Esponda Meza, alejandro.esponda21@gmail.com 2025
         </footer>
     </body>
+
 </html>
