--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
                 <ul>
                     <li><a href="https://github.com/AlexitoC21/Lab2">Práctica 2</a></li>
                 </ul>
+                <li>Práctica 3:</li>
+                <ul>
+                    <li><a href="https://github.com/AlexitoC21/LAB3">Práctica 3</a></li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
