--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="Actividad1/Ejercicio2/Index.html">Ejercicio 2</a></li>
                     <li><a href="Actividad1/Ejercicio%203/Ejercicio3.html">Ejercicio 3</a></li>
                 </ul>
-                <li>Práctica 2::</li>
+                <li>Práctica 2:</li>
                 <ul>
                     <li><a href="https://github.com/AlexitoC21/Lab2">Práctica 2</a></li>
                 </ul>
@@ -26,12 +26,17 @@
                 <ul>
                     <li><a href="https://github.com/AlexitoC21/LAB3">Práctica 3</a></li>
                 </ul>
+                <li>Práctica 4:</li>
+                <ul>
+                    <li><a href="https://github.com/AlexitoC21/Lab4">Práctica  4</a></li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
