--- a/index.html
+++ b/index.html
@@ -30,12 +30,17 @@
                 <ul>
                     <li><a href="https://github.com/AlexitoC21/Lab4">Práctica  4</a></li>
                 </ul>
+                <li>Práctica 5:</li>
+                <ul>
+                    <li><a href="Practica5/foto.html">Práctica  5</a></li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
