--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 </ul>
                 <li>Práctica 5:</li>
                 <ul>
-                    <li><a href="Practica5/foto.html">Práctica  5</a></li>
+                    <li><a href="Practica5/foto.html">Práctica  5 -> Vista de la página</a></li>
+                    <li><a href="https://github.com/AlexitoC21/Lab5">Práctica  5 -> Archivos</a></li>
                 </ul>
             </ol>
         
@@ -40,6 +41,7 @@
     </body>
 
 </html>
+
 
 
 
