Add Práctica 6 section to index.html
Added new section for Práctica 6 with links.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
                 </ul>
                 <li>Práctica 4:</li>
                 <ul>
-                    <li><a href="https://github.com/AlexitoC21/Lab4">Práctica  4</a></li>
+                    <li><a href="https://github.com/AlexitoC21/Lab4">Práctica 4</a></li>
                 </ul>
                 <li>Práctica 5:</li>
                 <ul>
-                    <li><a href="Practica5/foto.html">Práctica  5 -> Vista de la página</a></li>
-                    <li><a href="https://github.com/AlexitoC21/Lab5">Práctica  5 -> Archivos</a></li>
+                    <li><a href="Practica5/foto.html">Práctica 5 -> Vista de la página</a></li>
+                    <li><a href="https://github.com/AlexitoC21/Lab5">Práctica 5 -> Archivos</a></li>
+                </ul>
+                <li>Práctica 6:</li>
+                <ul>
+                    <li><a href="LAB6/Ejercicio3.html">Práctica 6</a></li>
+                    <li><a href="LAB6/practica6_ejercicio/ejercicio.html">Práctica 6: Ejercicio</a></li>
                 </ul>
             </ol>
         
@@ -41,6 +46,7 @@
     </body>
 
 </html>
+
 
 
 
