--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
                     <li><a href="LAB6/Ejercicio3.html">Práctica 6</a></li>
                     <li><a href="LAB6/practica6_ejercicio/ejercicio.html">Práctica 6: Ejercicio</a></li>
                 </ul>
+                <li>Tarea 4:</li>
+                <ul>
+                    <li><a href="Tarea4/index.html">Tarea 4</a></li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
