Add Practica 7 section with exercise links
Added new section for Practica 7 with links to exercises.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
                 <ul>
                     <li><a href="Tarea4/index.html">Tarea 4</a></li>
                 </ul>
+                <li>Práctica 7:</li>
+                <ul>
+                    <li><a href="practica7/ejercicio1/index.html">Ejercicio 1</a></li>
+                    <li><a href="practica7/ejercicio2/tienda-arte.html">Ejercicio 2</a></li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
