Update index.html with new tasks and links
Added links for Tarea 5 and updated the HTML structure.

--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
                     <li><a href="practica7/ejercicio1/index.html">Ejercicio 1</a></li>
                     <li><a href="practica7/ejercicio2/tienda-arte.html">Ejercicio 2</a></li>
                 </ul>
+                <li>Tarea 5:</li>
+                <ul>
+                    <li><a href="Tarea5/ListaTareas/index.html">Lista de tareas</a></li>
+                    <li><a href="Tarea5/CosoAJAX/ajax.html">AJAX</a></li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
