--- a/index.html
+++ b/index.html
@@ -54,12 +54,18 @@
                     <li><a href="Tarea5/ListaTareas/index.html">Lista de tareas</a></li>
                     <li><a href="Tarea5/CosoAJAX/ajax.html">AJAX</a></li>
                 </ul>
+                <ul>
+                    <li><a href="LAB8/ejercicioLab8.html">Ejercicio 1</a></li>
+                    <li><a href="LAB8/index.html">Ejercicio 2: café</a></li>
+
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
