--- a/index.html
+++ b/index.html
@@ -59,12 +59,17 @@
                     <li><a href="LAB8/ejrcicioLab8.html">Ejercicio 1</a></li>
                     <li><a href="LAB8/index.html">Ejercicio 2: café</a></li>
                 </ul>
+                <li>Práctica 9:</li>
+                <ul>
+                    <li><a href="https://github.com/AlexitoC21/LAB9">Carpeta de la biblioteca</li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
