Fix HTML structure and add missing links

--- a/index.html
+++ b/index.html
@@ -63,12 +63,17 @@
                 <ul>
                     <li><a href="https://github.com/AlexitoC21/LAB9">Carpeta de la biblioteca</li>
                 </ul>
+                <li>Tarea:</li>
+                <ul>
+                    <li><a href="https://github.com/AlexitoC21/Tarea">Tarea de js</li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
