--- a/index.html
+++ b/index.html
@@ -67,12 +67,17 @@
                 <ul>
                     <li><a href="https://github.com/AlexitoC21/Tarea">Tarea de js</li>
                 </ul>
+                <li>Tarea 11:</li>
+                <ul>
+                    <li><a href="tarea11/index.html">Tarea 11</li>
+                </ul>
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
