--- a/index.html
+++ b/index.html
@@ -71,12 +71,18 @@
                 <ul>
                     <li><a href="tarea11/index.html">Tarea 11</li>
                 </ul>
+                <li>Práctica 10:</li>
+                <ul>
+                    <li><a href="https://github.com/AlexitoC21/LAB10/upload">Práctica API</li>
+                </ul>
+                
             </ol>
         
 
     </body>
 
 </html>
+
 
 
 
