--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </ul>
                 <li>Práctica 10:</li>
                 <ul>
-                    <li><a href="https://github.com/AlexitoC21/LAB10/upload">Práctica API</li>
+                    <li><a href="https://github.com/AlexitoC21/LAB10">Práctica API</li>
                 </ul>
                 
             </ol>
@@ -82,6 +82,7 @@
     </body>
 
 </html>
+
 
 
 
